<resources>
    <string name="app_name">4image1excess</string>
    <string name="start_game">Начать игру</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ponts">Очки: </string>
    <string name="Lives">Жизни: </string>
    <string name="rate">Рейтинг</string>
    <string name="choose_excess_image1">Выберите лишнюю картинку</string>
    <string name="choose_wrong">Не верно</string>

    <string name="result_dialog">Следующий уровень</string>
    <string name="next_level">Следующий уровень</string>
    <string name="title_activity_ads">AdsActivity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="title_activity_ads_interstial">AdsInterstialActivity</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Advertise Google Play</string>

    <string name="game_over">Если у вас закончились жизни, их можно <b>восстановить посмотрев рекламу</b>, или они восстановятся сами в течении одного дня.</string>
    <string name="your_lives">У вас <b>0</b> жизней.</string>

    <string name="close">Закрыть</string>
    <string name="restore">Восстановить</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выйти из игры?</string>
</resources>
