<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="360dp"
                android:layout_height="440dp"
                android:layout_gravity="center"
                android:background="@color/colorBack"
                android:gravity="center">


    <ImageView
        android:id="@+id/kubok"
        android:layout_width="260dp"
        android:layout_height="212dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/kubok"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_no"
            style="@style/dialog_buton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:text="@string/no"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_yes"
            style="@style/dialog_buton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:text="@string/yes"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

</RelativeLayout>